@@ -25,14 +25,15 @@ import java.util.TreeSet;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.mapreduce.Job;
 import org.apache.pig.LoadFunc;
 import org.apache.pig.LoadMetadata;
 import org.apache.pig.LoadPushDown;
-import org.apache.pig.PigException;
-import org.apache.pig.ResourceSchema;
 import org.apache.pig.LoadPushDown.RequiredField;
 import org.apache.pig.LoadPushDown.RequiredFieldList;
 import org.apache.pig.LoadPushDown.RequiredFieldResponse;
+import org.apache.pig.PigException;
+import org.apache.pig.ResourceSchema;
 import org.apache.pig.data.DataType;
 import org.apache.pig.impl.PigContext;
 import org.apache.pig.impl.io.FileSpec;
@@ -43,11 +44,8 @@ import org.apache.pig.impl.plan.ProjectionMap;
 import org.apache.pig.impl.plan.RequiredFields;
 import org.apache.pig.impl.plan.VisitorException;
 import org.apache.pig.impl.util.MultiMap;
+import org.apache.pig.impl.util.ObjectSerializer;
 import org.apache.pig.impl.util.Pair;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
-import org.apache.hadoop.conf.Configuration;
-import org.apache.hadoop.mapreduce.Job;
 
 public class LOLoad extends RelationalOperator {
     private static final long serialVersionUID = 2L;
@@ -385,10 +383,51 @@ public class LOLoad extends RelationalOperator {
     }
     
     @Override
-    public void setAlias(String newAlias) {
-        super.setAlias(newAlias);
-        mLoadFunc.setUDFContextSignature(getAlias());
-    }
+	public void setAlias(String newAlias) {
+		super.setAlias(newAlias);
+		mLoadFunc.setUDFContextSignature(getAlias());
+
+		// set the schema in this method using the new alias assigned
+		storeScriptSchema();
+	}
+
+	/**
+	 * This method will store the scriptSchema:Schema using ObjectSerializer to
+	 * the current configuration.<br/>
+	 * The schema can be retrieved by load functions or UDFs to know the schema
+	 * the user entered in the as clause.<br/>
+	 * The name format is:<br/>
+	 * 
+	 * <pre>
+	 * ${UDFSignature}.scriptSchema = ObjectSerializer.serialize(scriptSchema)
+	 * </pre>
+	 * <p/>
+	 * Note that this is not the schema the load functiona returns but will
+	 * always be the as clause schema.<br/>
+	 * That is a = LOAD 'input' as (a:chararray, b:chararray)<br/>
+	 * The schema wil lbe (a:chararray, b:chararray)<br/>
+	 * <p/>
+	 * 
+	 * TODO Find better solution to make script schema available to LoadFunc see
+	 * https://issues.apache.org/jira/browse/PIG-1717
+	 */
+	private void storeScriptSchema() {
+		String alias = getAlias();
+		if (!(conf == null || alias == null || scriptSchema == null)) {
+
+			try {
+
+				conf.set(alias + ".scriptSchema",
+						ObjectSerializer.serialize(scriptSchema));
+			} catch (IOException ioe) {
+				int errCode = 1018;
+				String msg = "Problem serializing script schema";
+				FrontendException fee = new FrontendException(msg, errCode,
+						PigException.INPUT, false, null, ioe);
+				throw new RuntimeException(fee);
+			}
+		}
+	}
 
     @Override
     public boolean pruneColumns(List<Pair<Integer, Integer>> columns)
